# rust-traits-examples

./: Cargo.toml  README.md  justfile  package.puml  traits-overview.puml
.github/workflows/: bdd-tests.yml  test.yml
bdd-tests/: Cargo.toml  justfile
bdd-tests/tests/: bdd_tests.rs
bdd-tests/tests/features/: animal_capabilities_matrix.feature  animal_movement.feature  dog_breeds.feature  energy_management.feature  vehicle_capabilities.feature  vehicle_movement.feature  winner_announcement.feature
bdd-tests/tests/steps/: animal_steps.rs  data_table_steps.rs  energy_steps.rs  mod.rs  vehicle_steps.rs
examples/: relay_competition.rs  triathlon_competition.rs  unified_race_competition.rs  vehicle_race_competition.rs
src/: lib.rs
src/animals/: animal.rs  dog.rs  duck.rs  eagle.rs  mod.rs  penguin.rs  snake.rs  whale.rs
src/behaviors/: driving.rs  flying.rs  land_move.rs  mod.rs  moving.rs  swimming.rs  walking.rs
src/competitions/: mod.rs  relay.rs  triathlon.rs  unified_race.rs  vehicle_race.rs
src/core/: energy_level.rs  has_energy.rs  intensity.rs  mod.rs  terrain.rs  weather.rs
src/errors/: activity_error.rs
src/vehicles/: airplane.rs  amphibious.rs  car.rs  helicopter.rs  mod.rs  motorcycle.rs  ship.rs  truck.rs  vehicle.rs
