[package]
name = "rust-traits-examples-bdd-tests"
version = "0.1.0"
edition = "2024"
authors = ["Christian M"]
description = "BDD and integration tests for Rust Traits Examples"
license = "MIT"
keywords = ["traits", "tests", "bdd", "cucumber"]
categories = ["development-tools::testing"]

[dependencies]
cucumber = { version = "0.21.1", features = ["output-json", "output-junit"] }
rust-traits-examples = { path = ".." }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "bdd_tests"
harness = false
